--- a/request.ipynb
+++ b/request.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -22,7 +22,7 @@
         "\n",
         "# Mensagem\n",
         "messages.append({\"role\": \"user\", \"content\": \n",
-        "                 \"Give me travel recomendations in Sao Paulo' state in winter with tourist porposes.\"})\n",
+        "                 \"Give me travel recomendations in Sao Paulo state in winter with tourist porposes.\"})\n",
         "\n",
         "data = {\"model\": \"gpt-3.5-turbo\", \"messages\": messages}\n",
         "response = requests.post(url, headers=headers, json=data)\n",
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -80,27 +80,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{'São Paulo': ['Visit the São Paulo Museum of Art (MASP) and see works by famous artists like Van Gogh, Picasso and Monet.',\n",
-              "  'Explore the trendy Vila Madalena neighborhood, known for its street art, restaurants and nightlife.',\n",
-              "  \"Take a walk around Ibirapuera Park, which is São Paulo's largest park and has several attractions including museums and a Japanese garden.\",\n",
-              "  \"Visit the Municipal Market of São Paulo, one of the city's main attractions where you can find several typical foods from Brazil and the world.\"],\n",
-              " 'Campos do Jordão': ['Enjoy the cold weather in the charming winter wonderland of Campos do Jordão.',\n",
-              "  'Visit the Frei Baraúna Convent, a historic building with beautiful architecture and stunning views of the surrounding mountains.',\n",
-              "  'Take a ride on the cable car to the top of the Elephant Hill for breathtaking views of the region.',\n",
-              "  'Explore the Campos do Jordão State Park, which has over 8,000 hectares of stunning nature and wildlife to discover.'],\n",
-              " 'Ilhabela': [\"Relax on the island's beautiful beaches and swim in the turquoise waters.\",\n",
-              "  'Hike to the top of the Baepi Hill for panoramic views of the island and surrounding seascape.',\n",
-              "  'Visit the Toca Waterfall, a stunning natural attraction with beautiful pools and surrounding rainforest.',\n",
-              "  'Take a boat tour around the island to explore its many coves, beaches and crystal-clear waters.']}"
+              "{'Sao Paulo City': ['Visit the Municipal Market for delicious local food',\n",
+              "  'Go to Ibirapuera Park to enjoy the green space and museums',\n",
+              "  'Take a walk around Vila Madalena neighborhood for street art'],\n",
+              " 'Campos do Jordão': ['Visit the Boa Vista Palace for its architecture and panoramic views',\n",
+              "  'Take the cable car to reach the top of Elephant Hill',\n",
+              "  'Enjoy a hot chocolate at a local chocolate factory or café'],\n",
+              " 'Ilhabela': ['Go to Castelhanos beach for surfing and hiking opportunities',\n",
+              "  'Visit Bonete beach and enjoy fresh seafood at a local restaurant',\n",
+              "  \"Take a boat tour to explore the island's beaches and waterfalls\"],\n",
+              " 'São Sebastião': ['Visit the historic center for its colonial architecture and cultural events',\n",
+              "  'Explore the beaches of Toque Toque Grande, Boiçucanga, and Maresias',\n",
+              "  'Hike the trails of Serra do Mar State Park']}"
             ]
           },
-          "execution_count": 54,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
