--- a/request.ipynb
+++ b/request.ipynb
@@ -1,6 +1,14 @@
 {
   "cells": [
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Fazendo testes com a API"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 55,
       "metadata": {},
@@ -8,7 +16,7 @@
       "source": [
         "import requests\n",
         "\n",
-        "OPENAI_API_KEY = \"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\"\n",
+        "OPENAI_API_KEY = \"API-KEY\"\n",
         "\n",
         "url = \"https://api.openai.com/v1/chat/completions\"\n",
         "headers = {\"Content-Type\": \"application/json\",\n",
@@ -130,7 +138,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.5"
+      "version": "3.9.10"
     },
     "vscode": {
       "interpreter": {
